// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DateField > should render correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 100%;
}

.emotion-2 {
  display: inherit;
}

.emotion-2[data-container-full-width="true"] {
  width: 100%;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 3rem;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-6>.emotion-9 {
  color: #3f4250;
}

.emotion-6>.emotion-9::-webkit-input-placeholder {
  color: #727683;
}

.emotion-6>.emotion-9::-moz-placeholder {
  color: #727683;
}

.emotion-6>.emotion-9:-ms-input-placeholder {
  color: #727683;
}

.emotion-6>.emotion-9::placeholder {
  color: #727683;
}

.emotion-6[data-success='true'] {
  border-color: #22674e;
}

.emotion-6[data-error='true'] {
  border-color: #b3144d;
}

.emotion-6[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-6[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-6[data-disabled='true']>.emotion-9 {
  color: #b5b7bd;
}

.emotion-6[data-disabled='true']>.emotion-9::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-6[data-disabled='true']>.emotion-9::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-6[data-disabled='true']>.emotion-9:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-6[data-disabled='true']>.emotion-9::placeholder {
  color: #b5b7bd;
}

.emotion-6:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  width: 100%;
  padding-left: 1rem;
  background: transparent;
  font-size: 0.875rem;
}

.emotion-8[data-size='large'] {
  font-size: 1rem;
}

.emotion-8[data-size='small'] {
  padding-left: 0.5rem;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding: 0 1rem;
  border-left: 1px solid;
  border-color: inherit;
}

.emotion-12 {
  vertical-align: middle;
  fill: #3f4250;
  height: 1.25rem;
  width: 1.25rem;
  min-width: 1.25rem;
  min-height: 1.25rem;
}

.emotion-12 .fillStroke {
  stroke: #3f4250;
  fill: none;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
    >
      <div
        class="emotion-0 emotion-1"
      >
        <div
          aria-controls=":r0:"
          aria-describedby=":r0:"
          class="emotion-2 emotion-3"
          tabindex="0"
        >
          <div
            class="emotion-4 emotion-5"
          >
            <div>
              <div
                class="emotion-6 emotion-7"
                data-disabled="false"
                data-error="false"
                data-readonly="false"
                data-success="false"
              >
                <input
                  aria-invalid="false"
                  autocomplete="false"
                  class="emotion-8 emotion-9"
                  data-size="large"
                  id=":r1:"
                  name="test"
                  type="text"
                />
                <div
                  class="emotion-10 emotion-11"
                >
                  <svg
                    class="emotion-12 emotion-13"
                    viewBox="0 0 20 20"
                  >
                    <path
                      d="M5.25 12C5.25 11.5858 5.58579 11.25 6 11.25H6.01C6.42421 11.25 6.76 11.5858 6.76 12V12.01C6.76 12.4242 6.42421 12.76 6.01 12.76H6C5.58579 12.76 5.25 12.4242 5.25 12.01V12Z"
                    />
                    <path
                      d="M6 13.25C5.58579 13.25 5.25 13.5858 5.25 14V14.01C5.25 14.4242 5.58579 14.76 6 14.76H6.01C6.42421 14.76 6.76 14.4242 6.76 14.01V14C6.76 13.5858 6.42421 13.25 6.01 13.25H6Z"
                    />
                    <path
                      d="M7.25 12C7.25 11.5858 7.58579 11.25 8 11.25H8.01C8.42421 11.25 8.76 11.5858 8.76 12V12.01C8.76 12.4242 8.42421 12.76 8.01 12.76H8C7.58579 12.76 7.25 12.4242 7.25 12.01V12Z"
                    />
                    <path
                      d="M8 13.25C7.58579 13.25 7.25 13.5858 7.25 14V14.01C7.25 14.4242 7.58579 14.76 8 14.76H8.01C8.42421 14.76 8.76 14.4242 8.76 14.01V14C8.76 13.5858 8.42421 13.25 8.01 13.25H8Z"
                    />
                    <path
                      d="M9.25 10C9.25 9.58579 9.58579 9.25 10 9.25H10.01C10.4242 9.25 10.76 9.58579 10.76 10V10.01C10.76 10.4242 10.4242 10.76 10.01 10.76H10C9.58579 10.76 9.25 10.4242 9.25 10.01V10Z"
                    />
                    <path
                      d="M10 11.25C9.58579 11.25 9.25 11.5858 9.25 12V12.01C9.25 12.4242 9.58579 12.76 10 12.76H10.01C10.4242 12.76 10.76 12.4242 10.76 12.01V12C10.76 11.5858 10.4242 11.25 10.01 11.25H10Z"
                    />
                    <path
                      d="M9.25 14C9.25 13.5858 9.58579 13.25 10 13.25H10.01C10.4242 13.25 10.76 13.5858 10.76 14V14.01C10.76 14.4242 10.4242 14.76 10.01 14.76H10C9.58579 14.76 9.25 14.4242 9.25 14.01V14Z"
                    />
                    <path
                      d="M12 9.25C11.5858 9.25 11.25 9.58579 11.25 10V10.01C11.25 10.4242 11.5858 10.76 12 10.76H12.01C12.4242 10.76 12.76 10.4242 12.76 10.01V10C12.76 9.58579 12.4242 9.25 12.01 9.25H12Z"
                    />
                    <path
                      d="M11.25 12C11.25 11.5858 11.5858 11.25 12 11.25H12.01C12.4242 11.25 12.76 11.5858 12.76 12V12.01C12.76 12.4242 12.4242 12.76 12.01 12.76H12C11.5858 12.76 11.25 12.4242 11.25 12.01V12Z"
                    />
                    <path
                      d="M12 13.25C11.5858 13.25 11.25 13.5858 11.25 14V14.01C11.25 14.4242 11.5858 14.76 12 14.76H12.01C12.4242 14.76 12.76 14.4242 12.76 14.01V14C12.76 13.5858 12.4242 13.25 12.01 13.25H12Z"
                    />
                    <path
                      d="M13.25 10C13.25 9.58579 13.5858 9.25 14 9.25H14.01C14.4242 9.25 14.76 9.58579 14.76 10V10.01C14.76 10.4242 14.4242 10.76 14.01 10.76H14C13.5858 10.76 13.25 10.4242 13.25 10.01V10Z"
                    />
                    <path
                      d="M14 11.25C13.5858 11.25 13.25 11.5858 13.25 12V12.01C13.25 12.4242 13.5858 12.76 14 12.76H14.01C14.4242 12.76 14.76 12.4242 14.76 12.01V12C14.76 11.5858 14.4242 11.25 14.01 11.25H14Z"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M5.75 2C6.16421 2 6.5 2.33579 6.5 2.75V4H13.5V2.75C13.5 2.33579 13.8358 2 14.25 2C14.6642 2 15 2.33579 15 2.75V4H15.25C16.7688 4 18 5.23122 18 6.75V15.25C18 16.7688 16.7688 18 15.25 18H4.75C3.23122 18 2 16.7688 2 15.25V6.75C2 5.23122 3.23122 4 4.75 4H5V2.75C5 2.33579 5.33579 2 5.75 2ZM4.75 7.5C4.05964 7.5 3.5 8.05964 3.5 8.75V15.25C3.5 15.9404 4.05964 16.5 4.75 16.5H15.25C15.9404 16.5 16.5 15.9404 16.5 15.25V8.75C16.5 8.05964 15.9404 7.5 15.25 7.5H4.75Z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`DateField > should render correctly disabled 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 100%;
}

.emotion-2 {
  display: inherit;
}

.emotion-2[data-container-full-width="true"] {
  width: 100%;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 3rem;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-6>.emotion-9 {
  color: #3f4250;
}

.emotion-6>.emotion-9::-webkit-input-placeholder {
  color: #727683;
}

.emotion-6>.emotion-9::-moz-placeholder {
  color: #727683;
}

.emotion-6>.emotion-9:-ms-input-placeholder {
  color: #727683;
}

.emotion-6>.emotion-9::placeholder {
  color: #727683;
}

.emotion-6[data-success='true'] {
  border-color: #22674e;
}

.emotion-6[data-error='true'] {
  border-color: #b3144d;
}

.emotion-6[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-6[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-6[data-disabled='true']>.emotion-9 {
  color: #b5b7bd;
}

.emotion-6[data-disabled='true']>.emotion-9::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-6[data-disabled='true']>.emotion-9::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-6[data-disabled='true']>.emotion-9:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-6[data-disabled='true']>.emotion-9::placeholder {
  color: #b5b7bd;
}

.emotion-6:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  width: 100%;
  padding-left: 1rem;
  background: transparent;
  font-size: 0.875rem;
}

.emotion-8[data-size='large'] {
  font-size: 1rem;
}

.emotion-8[data-size='small'] {
  padding-left: 0.5rem;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding: 0 1rem;
  border-left: 1px solid;
  border-color: inherit;
}

.emotion-12 {
  vertical-align: middle;
  fill: #b5b7bd;
  height: 1.25rem;
  width: 1.25rem;
  min-width: 1.25rem;
  min-height: 1.25rem;
}

.emotion-12 .fillStroke {
  stroke: #b5b7bd;
  fill: none;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
    >
      <div
        class="emotion-0 emotion-1"
      >
        <div
          aria-controls=":r3:"
          aria-describedby=":r3:"
          class="emotion-2 emotion-3"
          tabindex="0"
        >
          <div
            class="emotion-4 emotion-5"
          >
            <div>
              <div
                class="emotion-6 emotion-7"
                data-disabled="true"
                data-error="false"
                data-readonly="false"
                data-success="false"
              >
                <input
                  aria-invalid="false"
                  autocomplete="false"
                  class="emotion-8 emotion-9"
                  data-size="large"
                  disabled=""
                  id=":r4:"
                  name="test"
                  type="text"
                />
                <div
                  class="emotion-10 emotion-11"
                >
                  <svg
                    class="emotion-12 emotion-13"
                    viewBox="0 0 20 20"
                  >
                    <path
                      d="M5.25 12C5.25 11.5858 5.58579 11.25 6 11.25H6.01C6.42421 11.25 6.76 11.5858 6.76 12V12.01C6.76 12.4242 6.42421 12.76 6.01 12.76H6C5.58579 12.76 5.25 12.4242 5.25 12.01V12Z"
                    />
                    <path
                      d="M6 13.25C5.58579 13.25 5.25 13.5858 5.25 14V14.01C5.25 14.4242 5.58579 14.76 6 14.76H6.01C6.42421 14.76 6.76 14.4242 6.76 14.01V14C6.76 13.5858 6.42421 13.25 6.01 13.25H6Z"
                    />
                    <path
                      d="M7.25 12C7.25 11.5858 7.58579 11.25 8 11.25H8.01C8.42421 11.25 8.76 11.5858 8.76 12V12.01C8.76 12.4242 8.42421 12.76 8.01 12.76H8C7.58579 12.76 7.25 12.4242 7.25 12.01V12Z"
                    />
                    <path
                      d="M8 13.25C7.58579 13.25 7.25 13.5858 7.25 14V14.01C7.25 14.4242 7.58579 14.76 8 14.76H8.01C8.42421 14.76 8.76 14.4242 8.76 14.01V14C8.76 13.5858 8.42421 13.25 8.01 13.25H8Z"
                    />
                    <path
                      d="M9.25 10C9.25 9.58579 9.58579 9.25 10 9.25H10.01C10.4242 9.25 10.76 9.58579 10.76 10V10.01C10.76 10.4242 10.4242 10.76 10.01 10.76H10C9.58579 10.76 9.25 10.4242 9.25 10.01V10Z"
                    />
                    <path
                      d="M10 11.25C9.58579 11.25 9.25 11.5858 9.25 12V12.01C9.25 12.4242 9.58579 12.76 10 12.76H10.01C10.4242 12.76 10.76 12.4242 10.76 12.01V12C10.76 11.5858 10.4242 11.25 10.01 11.25H10Z"
                    />
                    <path
                      d="M9.25 14C9.25 13.5858 9.58579 13.25 10 13.25H10.01C10.4242 13.25 10.76 13.5858 10.76 14V14.01C10.76 14.4242 10.4242 14.76 10.01 14.76H10C9.58579 14.76 9.25 14.4242 9.25 14.01V14Z"
                    />
                    <path
                      d="M12 9.25C11.5858 9.25 11.25 9.58579 11.25 10V10.01C11.25 10.4242 11.5858 10.76 12 10.76H12.01C12.4242 10.76 12.76 10.4242 12.76 10.01V10C12.76 9.58579 12.4242 9.25 12.01 9.25H12Z"
                    />
                    <path
                      d="M11.25 12C11.25 11.5858 11.5858 11.25 12 11.25H12.01C12.4242 11.25 12.76 11.5858 12.76 12V12.01C12.76 12.4242 12.4242 12.76 12.01 12.76H12C11.5858 12.76 11.25 12.4242 11.25 12.01V12Z"
                    />
                    <path
                      d="M12 13.25C11.5858 13.25 11.25 13.5858 11.25 14V14.01C11.25 14.4242 11.5858 14.76 12 14.76H12.01C12.4242 14.76 12.76 14.4242 12.76 14.01V14C12.76 13.5858 12.4242 13.25 12.01 13.25H12Z"
                    />
                    <path
                      d="M13.25 10C13.25 9.58579 13.5858 9.25 14 9.25H14.01C14.4242 9.25 14.76 9.58579 14.76 10V10.01C14.76 10.4242 14.4242 10.76 14.01 10.76H14C13.5858 10.76 13.25 10.4242 13.25 10.01V10Z"
                    />
                    <path
                      d="M14 11.25C13.5858 11.25 13.25 11.5858 13.25 12V12.01C13.25 12.4242 13.5858 12.76 14 12.76H14.01C14.4242 12.76 14.76 12.4242 14.76 12.01V12C14.76 11.5858 14.4242 11.25 14.01 11.25H14Z"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M5.75 2C6.16421 2 6.5 2.33579 6.5 2.75V4H13.5V2.75C13.5 2.33579 13.8358 2 14.25 2C14.6642 2 15 2.33579 15 2.75V4H15.25C16.7688 4 18 5.23122 18 6.75V15.25C18 16.7688 16.7688 18 15.25 18H4.75C3.23122 18 2 16.7688 2 15.25V6.75C2 5.23122 3.23122 4 4.75 4H5V2.75C5 2.33579 5.33579 2 5.75 2ZM4.75 7.5C4.05964 7.5 3.5 8.05964 3.5 8.75V15.25C3.5 15.9404 4.05964 16.5 4.75 16.5H15.25C15.9404 16.5 16.5 15.9404 16.5 15.25V8.75C16.5 8.05964 15.9404 7.5 15.25 7.5H4.75Z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`DateField > should trigger events 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 100%;
}

.emotion-2 {
  display: inherit;
}

.emotion-2[data-container-full-width="true"] {
  width: 100%;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 3rem;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-6>.emotion-9 {
  color: #3f4250;
}

.emotion-6>.emotion-9::-webkit-input-placeholder {
  color: #727683;
}

.emotion-6>.emotion-9::-moz-placeholder {
  color: #727683;
}

.emotion-6>.emotion-9:-ms-input-placeholder {
  color: #727683;
}

.emotion-6>.emotion-9::placeholder {
  color: #727683;
}

.emotion-6[data-success='true'] {
  border-color: #22674e;
}

.emotion-6[data-error='true'] {
  border-color: #b3144d;
}

.emotion-6[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-6[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-6[data-disabled='true']>.emotion-9 {
  color: #b5b7bd;
}

.emotion-6[data-disabled='true']>.emotion-9::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-6[data-disabled='true']>.emotion-9::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-6[data-disabled='true']>.emotion-9:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-6[data-disabled='true']>.emotion-9::placeholder {
  color: #b5b7bd;
}

.emotion-6:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  width: 100%;
  padding-left: 1rem;
  background: transparent;
  font-size: 0.875rem;
}

.emotion-8[data-size='large'] {
  font-size: 1rem;
}

.emotion-8[data-size='small'] {
  padding-left: 0.5rem;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding: 0 1rem;
  border-left: 1px solid;
  border-color: inherit;
}

.emotion-12 {
  vertical-align: middle;
  fill: #3f4250;
  height: 1.25rem;
  width: 1.25rem;
  min-width: 1.25rem;
  min-height: 1.25rem;
}

.emotion-12 .fillStroke {
  stroke: #3f4250;
  fill: none;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
    >
      <div
        class="emotion-0 emotion-1"
      >
        <div
          aria-controls=":r6:"
          aria-describedby=":r6:"
          class="emotion-2 emotion-3"
          tabindex="0"
        >
          <div
            class="emotion-4 emotion-5"
          >
            <div>
              <div
                class="emotion-6 emotion-7"
                data-disabled="false"
                data-error="false"
                data-readonly="false"
                data-success="false"
              >
                <input
                  aria-invalid="false"
                  autocomplete="false"
                  class="emotion-8 emotion-9"
                  data-size="large"
                  id=":r7:"
                  name="test"
                  placeholder="YYYY-MM-DD"
                  type="text"
                  value="9/15/2022"
                />
                <div
                  class="emotion-10 emotion-11"
                >
                  <svg
                    class="emotion-12 emotion-13"
                    viewBox="0 0 20 20"
                  >
                    <path
                      d="M5.25 12C5.25 11.5858 5.58579 11.25 6 11.25H6.01C6.42421 11.25 6.76 11.5858 6.76 12V12.01C6.76 12.4242 6.42421 12.76 6.01 12.76H6C5.58579 12.76 5.25 12.4242 5.25 12.01V12Z"
                    />
                    <path
                      d="M6 13.25C5.58579 13.25 5.25 13.5858 5.25 14V14.01C5.25 14.4242 5.58579 14.76 6 14.76H6.01C6.42421 14.76 6.76 14.4242 6.76 14.01V14C6.76 13.5858 6.42421 13.25 6.01 13.25H6Z"
                    />
                    <path
                      d="M7.25 12C7.25 11.5858 7.58579 11.25 8 11.25H8.01C8.42421 11.25 8.76 11.5858 8.76 12V12.01C8.76 12.4242 8.42421 12.76 8.01 12.76H8C7.58579 12.76 7.25 12.4242 7.25 12.01V12Z"
                    />
                    <path
                      d="M8 13.25C7.58579 13.25 7.25 13.5858 7.25 14V14.01C7.25 14.4242 7.58579 14.76 8 14.76H8.01C8.42421 14.76 8.76 14.4242 8.76 14.01V14C8.76 13.5858 8.42421 13.25 8.01 13.25H8Z"
                    />
                    <path
                      d="M9.25 10C9.25 9.58579 9.58579 9.25 10 9.25H10.01C10.4242 9.25 10.76 9.58579 10.76 10V10.01C10.76 10.4242 10.4242 10.76 10.01 10.76H10C9.58579 10.76 9.25 10.4242 9.25 10.01V10Z"
                    />
                    <path
                      d="M10 11.25C9.58579 11.25 9.25 11.5858 9.25 12V12.01C9.25 12.4242 9.58579 12.76 10 12.76H10.01C10.4242 12.76 10.76 12.4242 10.76 12.01V12C10.76 11.5858 10.4242 11.25 10.01 11.25H10Z"
                    />
                    <path
                      d="M9.25 14C9.25 13.5858 9.58579 13.25 10 13.25H10.01C10.4242 13.25 10.76 13.5858 10.76 14V14.01C10.76 14.4242 10.4242 14.76 10.01 14.76H10C9.58579 14.76 9.25 14.4242 9.25 14.01V14Z"
                    />
                    <path
                      d="M12 9.25C11.5858 9.25 11.25 9.58579 11.25 10V10.01C11.25 10.4242 11.5858 10.76 12 10.76H12.01C12.4242 10.76 12.76 10.4242 12.76 10.01V10C12.76 9.58579 12.4242 9.25 12.01 9.25H12Z"
                    />
                    <path
                      d="M11.25 12C11.25 11.5858 11.5858 11.25 12 11.25H12.01C12.4242 11.25 12.76 11.5858 12.76 12V12.01C12.76 12.4242 12.4242 12.76 12.01 12.76H12C11.5858 12.76 11.25 12.4242 11.25 12.01V12Z"
                    />
                    <path
                      d="M12 13.25C11.5858 13.25 11.25 13.5858 11.25 14V14.01C11.25 14.4242 11.5858 14.76 12 14.76H12.01C12.4242 14.76 12.76 14.4242 12.76 14.01V14C12.76 13.5858 12.4242 13.25 12.01 13.25H12Z"
                    />
                    <path
                      d="M13.25 10C13.25 9.58579 13.5858 9.25 14 9.25H14.01C14.4242 9.25 14.76 9.58579 14.76 10V10.01C14.76 10.4242 14.4242 10.76 14.01 10.76H14C13.5858 10.76 13.25 10.4242 13.25 10.01V10Z"
                    />
                    <path
                      d="M14 11.25C13.5858 11.25 13.25 11.5858 13.25 12V12.01C13.25 12.4242 13.5858 12.76 14 12.76H14.01C14.4242 12.76 14.76 12.4242 14.76 12.01V12C14.76 11.5858 14.4242 11.25 14.01 11.25H14Z"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M5.75 2C6.16421 2 6.5 2.33579 6.5 2.75V4H13.5V2.75C13.5 2.33579 13.8358 2 14.25 2C14.6642 2 15 2.33579 15 2.75V4H15.25C16.7688 4 18 5.23122 18 6.75V15.25C18 16.7688 16.7688 18 15.25 18H4.75C3.23122 18 2 16.7688 2 15.25V6.75C2 5.23122 3.23122 4 4.75 4H5V2.75C5 2.33579 5.33579 2 5.75 2ZM4.75 7.5C4.05964 7.5 3.5 8.05964 3.5 8.75V15.25C3.5 15.9404 4.05964 16.5 4.75 16.5H15.25C15.9404 16.5 16.5 15.9404 16.5 15.25V8.75C16.5 8.05964 15.9404 7.5 15.25 7.5H4.75Z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
